Fix css overflow

--- a/frontend/web/styles/project/_lists.scss
+++ b/frontend/web/styles/project/_lists.scss
@@ -26,8 +26,8 @@
     overflow-x: hidden !important;
 }
 
-.overflow-visible .search-list .List {
-    overflow: auto !important;
+.overflow-visible .search-list, .overflow-visible .List {
+    overflow-x: visible !important;
 }
 
 .table-header {
